избавился от имен классов